# vigilant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING_EN.md  CONTRIBUTING_ES.md  Dockerfile  LICENSE  README.md  README_EN.md  README_ES.md  docker-compose.yml  docker-quick-start.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
config/: local.example.yaml
docs/: 00_indice.md  01_instalacion_y_configuracion.md  04_conversion_de_video.md  05_rescue_mode.md  07_production_deployment.md  09_formato_pdf.md  12_docker_quickstart.md
docs/en/: 00_index.md  01_installation_and_configuration.md  02_chain_of_custody.md  03_technical_architecture.md  04_video_conversion.md  05_rescue_mode.md  06_configuration_guide.md  07_production_deployment.md  08_legal_and_limitations.md  09_pdf_format.md  10_troubleshooting.md  11_tests.md  12_docker_quickstart.md
docs/es/: 00_indice.md  02_chain_of_custody.md  03_arquitectura_tecnica.md  04_conversion_de_video.md  06_guia_de_configuracion.md  07_production_deployment.md  08_legal_y_limitaciones.md  10_troubleshooting.md  11_tests.md
examples/: .gitkeep  README.md  README_EN.md  README_ES.md
examples/scripts/: blur_images.py
scripts/: setup.sh
tests/: conftest.py  test_cli.py  test_config.py  test_frame_extractor.py  test_handbrake.py  test_integrity.py  test_logger.py  test_pdf_parser.py  test_rescue.py  test_security.py
vigilant/: __init__.py  __main__.py  cli.py
vigilant/config/: default.yaml  local.example.yaml
vigilant/converters/: ffmpeg.py  handbrake.py  rescue.py
(+9 files in other folders)
